# rustic-cargo

./: Cargo.toml  DIRECTORY.md  LICENSE  Makefile  README.md
.github/: CODE_OF_CONDUCT.md  dependabot.yml  release.yml
.github/workflows/: build.yml  codeql.yml  directory_writer.yml  lint.yml  slack.yml  state.yml  test.yml  upload_coverage_report.yml
algorithms/: Cargo.toml  README.md
algorithms/src/: lib.rs
algorithms/tests/: circular_array_loop.rs  find_sum_of_three.rs  sort_colors.rs  sorted_squared_array.rs
basics/: Cargo.toml
basics/src/: functions.rs  main.rs
basics/src/enums/: hero.rs  ip_address.rs  job.rs  message.rs  mod.rs  monsters.rs  person.rs
basics/src/errors/: mod.rs  propagating_errors.rs  recoverable_errors.rs
basics/src/functions/: mod.rs
basics/src/functions/closures/: mod.rs
basics/src/functions/closures/inventory/: inventory.rs  mod.rs  shirt_color.rs
basics/src/generics/: point.rs
basics/src/lifetimes/: excerpt.rs  longest.rs  mod.rs
basics/src/maps/: map_basics.rs  mod.rs  struct_as_key.rs
basics/src/ownership/: ownership.rs
basics/src/sets/: sets.rs
basics/src/structs/: fruit.rs  mod.rs  person.rs  point.rs  rectangle.rs  running_totals.rs  speed.rs
basics/src/structs/tuple/: mod.rs  tuple_structs.rs
basics/src/traits/: bounds.rs  mod.rs  pair.rs  primitives.rs  summary.rs
datastructures/src/: iterator.rs  lib.rs  trees.rs
design/: Cargo.toml
git_hooks/: pre-commit
math/src/: factorial.rs  (+2 more)
puzzles/: Cargo.toml
scripts/: build_directory_md.py
src/: main.rs
strings/: Cargo.toml
time/: README.md
(+200 files in other folders)
